# paper-curator

./: .gitignore  Makefile  README.md  pyproject.toml
config/: paperqa.yaml
prompts/: paper_summary.md
scripts/: README.md  docker_run.sh  start_grobid.sh  test_ingest_parse.sh  test_paperqa.sh
services/: app.py
services/ingest_parse_service/: app.py
services/paperqa_service/: app.py
src/: compose.yml
src/backend/: Dockerfile  __init__.py  app.py  db.py  init.sql  requirements.txt
src/frontend/: Dockerfile  next.config.js  package.json
src/frontend/src/app/: layout.tsx  page.tsx
src/frontend/src/app/api/summarize/: route.ts
tests/: __init__.py  conftest.py  test_arxiv.py  test_embed.py  test_health.py  test_pdf_extract.py  test_qa.py  test_summarize.py
